[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Camera.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ScreenShaker.gd" type="Script" id=2]

[node name="Camera" type="Camera2D"]
position = Vector2( 960, 540 )
current = true
script = ExtResource( 1 )

[node name="ZoomTween" type="Tween" parent="."]

[node name="ScreenShaker" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ShakeTween" type="Tween" parent="ScreenShaker"]

[node name="Frequency" type="Timer" parent="ScreenShaker"]

[node name="Duration" type="Timer" parent="ScreenShaker"]
one_shot = true

[connection signal="timeout" from="ScreenShaker/Frequency" to="ScreenShaker" method="_on_Frequency_timeout"]
[connection signal="timeout" from="ScreenShaker/Duration" to="ScreenShaker" method="_on_Duration_timeout"]
